p4/xv6-public/runtests.log
starting build

**********************************************************************

Test build
build xv6 using make

**********************************************************************
Trying to build project using make
make xv6.img fs.img
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -O -nostdinc -I. -c bootmain.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -nostdinc -I. -c bootasm.S
ld -m    elf_i386 -N -e start -Ttext 0x7C00 -o bootblock.o bootasm.o bootmain.o
objdump -S bootblock.o > bootblock.asm
objcopy -S -O binary -j .text bootblock.o bootblock
./sign.pl bootblock
boot block is 451 bytes (max 510)
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o bio.o bio.c
In file included from bio.c:22:
defs.h:168:28: error: ‘struct trapframe’ declared inside parameter list will not be visible outside of this definition or declaration [-Werror]
  168 | void            pgf(struct trapframe *tf)
      |                            ^~~~~~~~~
In file included from bio.c:24:
spinlock.h: In function ‘pgf’:
spinlock.h:2:1: error: empty declaration [-Werror]
    2 | struct spinlock {
      | ^~~~~~
In file included from bio.c:25:
sleeplock.h:2:1: error: empty declaration [-Werror]
    2 | struct sleeplock {
      | ^~~~~~
In file included from bio.c:26:
fs.h:14:1: error: empty declaration [-Werror]
   14 | struct superblock {
      | ^~~~~~
fs.h:29:1: error: empty declaration [-Werror]
   29 | struct dinode {
      | ^~~~~~
fs.h:53:1: error: empty declaration [-Werror]
   53 | struct dirent {
      | ^~~~~~
In file included from bio.c:27:
buf.h:1:1: error: empty declaration [-Werror]
    1 | struct buf {
      | ^~~~~~
bio.c:40:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   40 | {
      | ^
bio.c:63:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   63 | {
      | ^
bio.c:98:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   98 | {
      | ^
bio.c:111:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  111 | {
      | ^
bio.c:122:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  122 | {
      | ^
In file included from bio.c:22:
defs.h:168:17: error: old-style parameter declarations in prototyped function definition
  168 | void            pgf(struct trapframe *tf)
      |                 ^~~
bio.c:145: error: expected ‘{’ at end of input
cc1: all warnings being treated as errors
make: *** [<builtin>: bio.o] Error 1


test build FAILED
 (build xv6 using make)
 make failed (error 2)
 required file 'xv6.img' does not exist after make
 required file 'fs.img' does not exist after make

Skipped 10 tests.
To keep testing after failing a test, use flag '-c' or '--continue'
